updated to animation enum
