# server/api/openapi.json
@@ -343,21 +343,6 @@
   },
   "components": {
     "schemas": {
-      "CropFilterProps": {
-        "type": "object",
-        "required": [
-          "left",
-          "right"
-        ],
-        "properties": {
-          "left": {
-            "type": "integer"
-          },
-          "right": {
-            "type": "integer"
-          }
-        }
-      },
       "ErrorResponse": {
         "oneOf": [
           {
@@ -386,6 +371,22 @@
           }
         ]
       },
+      "TimerProps": {
+        "type": "object",
+        "required": [
+          "duration",
+          "color"
+        ],
+        "properties": {
+          "color": {
+            "$ref": "#/components/schemas/ColorProp"
+          },
+          "duration": {
+            "type": "integer",
+            "format": "int64"
+          }
+        }
+      },
       "ColorProp": {
         "type": "object",
         "required": [
@@ -408,19 +409,18 @@
           }
         }
       },
-      "TimerProps": {
+      "CropFilterProps": {
         "type": "object",
         "required": [
-          "duration",
-          "color"
+          "left",
+          "right"
         ],
         "properties": {
-          "duration": {
-            "type": "integer",
-            "format": "int64"
+          "right": {
+            "type": "integer"
           },
-          "color": {
-            "$ref": "#/components/schemas/ColorProp"
+          "left": {
+            "type": "integer"
           }
         }
       }
